<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.canvara.apps.ratemyride.CreateReviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cab_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etCabOperator"
                android:inputType="textAutoComplete"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etMyRating"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etReview"
                android:inputType="text"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etDriverName"
                android:inputType="text"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/vehicle_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etVehicleNumber"
                android:inputType="text"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etStartDate"
                android:inputType="datetime"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/end_date"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/etEndDate"
                android:inputType="datetime"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_rate"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/action_rate" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
